# QEDSoft

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  vercel.json
examples/fifo/: fifo.sv  fifo_buggy.sv  spec.md
examples/matlab/: fifo_step.m
frontend/: .gitignore  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: CodeBlock.tsx  InputForm.tsx  Navbar.tsx  ResultsView.tsx
frontend/src/components/tabs/: ArtifactsTab.tsx  BottleneckTab.tsx  CoverageTab.tsx  OverviewTab.tsx  RequirementsTab.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
src/qedsoft/: __init__.py  bottlenecks.py  cli.py  llm_client.py  models.py  orchestrator.py  reports.py
src/qedsoft/api/: server.py
src/qedsoft/converters/: __init__.py  common.py  equivalence.py  hdl_to_lean.py  lean_expr.py  matlab_to_lean.py
src/qedsoft/formalizer/: __init__.py  autoformalizer.py  spec_parser.py
src/qedsoft/generators/: __init__.py  lean_generator.py  sva_generator.py
src/qedsoft/learning/: __init__.py  memory.py
src/qedsoft/repair/: __init__.py  sera_vgp.py
src/qedsoft/verifiers/: __init__.py  lean.py  sva.py  tools.py
tests/: test_smoke.py
