[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qedsoft"
version = "0.1.0"
description = "Verifier-guided autoformalization for semiconductor RTL verification using QEDAI, SVA, and Lean4."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QEDAI Research" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.111.0", "uvicorn>=0.30.0", "openai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
qedsoft = "qedsoft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
